Started adding animations, also, adding an idea in the about and landing page section

--- a/public/index.html
+++ b/public/index.html
@@ -45,21 +45,22 @@
             <h1 id="rence" class="font-extrabold text-[61.04px] text-customGray">I'm Clarence Velasco</h1>
             <h1 id="subtitle" class="font-extrabold text-[61.04px] text-customGray">A <span class="font-serif font-bold italic">Multimedia Artist</span> and a <span class="font-serif font-bold italic">Web Developer</span></h1>
         </div>
-        <div class="place-items-center mt-80">
-            <p id="crafted">Crafted with Code and Creativity</p>
-            <p id="crafted-arrow" class="mt-3"><i class="fa-solid fa-circle-arrow-down text-2xl"></i></p>
+        <div id="crafted-arrow" class="place-items-center mt-80">
+            <p>Crafted with Code and Creativity</p>
+            <p class="mt-3"><i class="fa-solid fa-circle-arrow-down text-2xl"></i></p>
         </div>
     </section>
 
     <section id="section-2">
         <!-- About Container -->
-        <div class="grid grid-cols-2 mx-20 h-auto p-12 mt-11">
-           <div id="image" class="grid place-content-center">
-                <div id="img-placeholder" class="w-[438px] h-[512px] rounded-[15px] drop-shadow-lg"><img src="assets/clarence.jpg" alt="Clarence Velasco" class=" rounded-[15px]" loading="lazy"></div>
+        <div class="grid grid-cols-2 mx-20 h-svh p-12 mt-11 relative bg-slate-500">
+           <div id="image" class="grid place-content-center ">
+                <div id="rencePic" class="w-[438px] h-[512px] rounded-[15px] drop-shadow-lg"><img src="assets/clarence.jpg" alt="Clarence Velasco" class=" rounded-[15px]" loading="lazy"></div>
+                <img src="assets/arrow.png" alt="" class="absolute w-20 bottom-[13%] left-[35%]">
            </div>
            <div class="grid content-center pr-20">
-                <h1 class="font-semibold text-[39.06px]">About Me</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis, libero doloribus exercitationem commodi impedit, reprehenderit corporis nesciunt optio saepe quod, ducimus aliquid. Explicabo earum at unde quos qui soluta maxime.</p>
+                <h1 id="about-me" class="font-semibold text-[39.06px]">About Me</h1>
+                <p id="about-text" class=" text-lg leading-8">Since 2016, I have been immersed in the world of creativity. Starting with capturing and editing photos on my smartphone, I discovered a spark within me, and opportunities began to open one after another. My passion for tech and multimedia has built a strong foundation and brought me to where I am today. A mix of technical and creative skills—along with my love for pop culture, movies and video games—is what truly helped me shape my ideas and turn it into something impactful.</p>
            </div>
         </div>
     </section>
