Still fixing animations, About me needs more refining

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.cdnfonts.com/css/general-sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/6372763a06.js" crossorigin="anonymous"></script>
@@ -53,10 +54,17 @@
 
     <section id="section-2">
         <!-- About Container -->
-        <div class="grid grid-cols-2 mx-20 h-svh p-12 mt-11 relative bg-slate-500">
+        <div class="grid grid-cols-2 mx-20 h-svh p-12 mt-11 relative">
            <div id="image" class="grid place-content-center ">
                 <div id="rencePic" class="w-[438px] h-[512px] rounded-[15px] drop-shadow-lg"><img src="assets/clarence.jpg" alt="Clarence Velasco" class=" rounded-[15px]" loading="lazy"></div>
-                <img src="assets/arrow.png" alt="" class="absolute w-20 bottom-[13%] left-[35%]">
+                <!-- A BSIT Grad! -->
+                <p id="info-1" class="absolute font-handwrite font-bold text-2xl text-darkMode rotate-[15deg] bottom-[9%] left-[33%]">A BSIT Grad!</p>
+                <img id="arrow-1" src="assets/arrow.png" alt="" class="absolute w-20 bottom-[13%] left-[35%]">
+
+                <!-- Spiderman -->
+                 <p id="info-2" class="absolute font-handwrite font-bold text-xl text-darkMode rotate-[-15deg] top-[14%] left-[33%]">Fave Supe!</p>
+                 <!-- <img src="assets/arrow.png" alt="" class="absolute w-16 top-[12%] left-[33%] rotate-[180deg]"> -->
+                 <img id="spiderman" src="assets/spiderman.png" alt="" class="absolute w-24 top-[18%] left-[35%] rotate-[15deg]">
            </div>
            <div class="grid content-center pr-20">
                 <h1 id="about-me" class="font-semibold text-[39.06px]">About Me</h1>
