Added more animations, tomorrow naman

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 
     <section id="section-1">
         <!-- Hero Section -->
-        <div class="h-80 mx-20 my-20 p-6 place-items-center">
+        <div class=" relative h-80 mx-20 my-20 p-6 place-items-center top-16">
             <h1 id="rence" class="font-extrabold text-[61.04px] text-customGray">I'm Clarence Velasco</h1>
             <h1 id="subtitle" class="font-extrabold text-[61.04px] text-customGray">A <span class="font-serif font-bold italic">Multimedia Artist</span> and a <span class="font-serif font-bold italic">Web Developer</span></h1>
         </div>
@@ -58,13 +58,20 @@
            <div id="image" class="grid place-content-center ">
                 <div id="rencePic" class="w-[438px] h-[512px] rounded-[15px] drop-shadow-lg"><img src="assets/clarence.jpg" alt="Clarence Velasco" class=" rounded-[15px]" loading="lazy"></div>
                 <!-- A BSIT Grad! -->
-                <p id="info-1" class="absolute font-handwrite font-bold text-2xl text-darkMode rotate-[15deg] bottom-[9%] left-[33%]">A BSIT Grad!</p>
-                <img id="arrow-1" src="assets/arrow.png" alt="" class="absolute w-20 bottom-[13%] left-[35%]">
+                <p id="info-1" class="absolute font-handwrite font-bold text-2xl text-darkMode rotate-[-10deg] bottom-[20%] left-[40%]">A BSIT Grad!</p>
+                <img id="arrow-1" src="assets/arrow.png" alt="" class="absolute w-20 rotate-[-15deg] bottom-[25%] left-[40%] ">
 
                 <!-- Spiderman -->
                  <p id="info-2" class="absolute font-handwrite font-bold text-xl text-darkMode rotate-[-15deg] top-[14%] left-[33%]">Fave Supe!</p>
                  <!-- <img src="assets/arrow.png" alt="" class="absolute w-16 top-[12%] left-[33%] rotate-[180deg]"> -->
                  <img id="spiderman" src="assets/spiderman.png" alt="" class="absolute w-24 top-[18%] left-[35%] rotate-[15deg]">
+
+                 <!-- Fave Albums -->
+                  <p id="open-genre" class="absolute font-handwrite font-bold text-l text-darkMode rotate-[7deg] top-[45%] left-[2%]">An Open-Genre Person!</p>
+                  <img id="bini" src="assets/bini.jpg" alt="" class="absolute w-28 bottom-[20%] left-[11%] z-10 rotate-[10deg]">
+                  <img id="xg" src="assets/xg.jpg" alt="" class="absolute w-28 bottom-[33%] left-[9%] rotate-[-8deg]">
+                  <img id="aura" src="assets/aura.png" alt="" class="absolute w-28 bottom-[25%] left-[7%] rotate-[4deg]">
+                  <img id="ampm" src="assets/ampm.jpg" alt="" class="absolute -z-10 w-28 bottom-[38%] left-[5%] rotate-[-4deg]">
            </div>
            <div class="grid content-center pr-20">
                 <h1 id="about-me" class="font-semibold text-[39.06px]">About Me</h1>
