Continuation of adding animations

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,11 @@
         <div class=" relative h-80 mx-20 my-20 p-6 place-items-center top-16">
             <h1 id="rence" class="font-extrabold text-[61.04px] text-customGray">I'm Clarence Velasco</h1>
             <h1 id="subtitle" class="font-extrabold text-[61.04px] text-customGray">A <span class="font-serif font-bold italic">Multimedia Artist</span> and a <span class="font-serif font-bold italic">Web Developer</span></h1>
+            
+            <div class="absolute w-2 h-2 bg-darkMode rounded-full opacity-70 particle" style="left: 10%;"></div>
+            <div class="absolute w-2 h-2 bg-darkMode rounded-full opacity-70 particle" style="left: 30%;"></div>
+            <div class="absolute w-2 h-2 bg-darkMode rounded-full opacity-70 particle" style="left: 60%;"></div>
+            <div class="absolute w-2 h-2 bg-darkMode rounded-full opacity-70 particle" style="left: 80%;"></div>
         </div>
         <div id="crafted-arrow" class="place-items-center mt-80">
             <p>Crafted with Code and Creativity</p>
@@ -62,30 +67,38 @@
                 <img id="arrow-1" src="assets/arrow.png" alt="" class="absolute w-20 rotate-[-15deg] bottom-[25%] left-[40%] ">
 
                 <!-- Spiderman -->
-                 <p id="info-2" class="absolute font-handwrite font-bold text-xl text-darkMode rotate-[-15deg] top-[14%] left-[33%]">Fave Supe!</p>
-                 <!-- <img src="assets/arrow.png" alt="" class="absolute w-16 top-[12%] left-[33%] rotate-[180deg]"> -->
-                 <img id="spiderman" src="assets/spiderman.png" alt="" class="absolute w-24 top-[18%] left-[35%] rotate-[15deg]">
+                <p id="info-2" class="absolute font-handwrite font-bold text-xl text-darkMode rotate-[-15deg] top-[14%] left-[33%]">Fave Supe!</p>
+                <img id="spiderman" src="assets/spiderman.png" alt="" class="absolute w-24 top-[18%] left-[35%] rotate-[15deg]">
 
                  <!-- Fave Albums -->
-                  <p id="open-genre" class="absolute font-handwrite font-bold text-l text-darkMode rotate-[7deg] top-[45%] left-[2%]">An Open-Genre Person!</p>
-                  <img id="bini" src="assets/bini.jpg" alt="" class="absolute w-28 bottom-[20%] left-[11%] z-10 rotate-[10deg]">
-                  <img id="xg" src="assets/xg.jpg" alt="" class="absolute w-28 bottom-[33%] left-[9%] rotate-[-8deg]">
-                  <img id="aura" src="assets/aura.png" alt="" class="absolute w-28 bottom-[25%] left-[7%] rotate-[4deg]">
-                  <img id="ampm" src="assets/ampm.jpg" alt="" class="absolute -z-10 w-28 bottom-[38%] left-[5%] rotate-[-4deg]">
+                <p id="open-genre" class="absolute font-handwrite font-bold text-l text-darkMode rotate-[7deg] top-[45%] left-[2%]">An Open-Genre Person!</p>
+                <img id="bini" src="assets/bini.jpg" alt="" class="absolute w-28 bottom-[20%] left-[11%] z-10 rotate-[10deg] rounded-[10px]">
+                <img id="xg" src="assets/xg.jpg" alt="" class="absolute w-28 bottom-[33%] left-[9%] rotate-[-8deg] rounded-[10px]">
+                <img id="aura" src="assets/aura.png" alt="" class="absolute w-28 bottom-[25%] left-[7%] rotate-[4deg] rounded-[10px]">
+                <img id="ampm" src="assets/ampm.jpg" alt="" class="absolute -z-10 w-28 bottom-[38%] left-[5%] rotate-[-4deg] rounded-[10px]">
            </div>
-           <div class="grid content-center pr-20">
+           <div class="grid content-center pr-20 relative">
+                <!-- Photoshop -->
+                <img id="software" src="assets/photoshop.png" alt="" class="absolute w-16 bottom-[29%] left-[40%] rotate-[-8deg]">
+                <img id="software" src="assets/illustrator.png" alt="" class="absolute w-16 bottom-[29%] left-[50%] rotate-[8deg]">
+                <img id="software" src="assets/after-effects.png" alt="" class="absolute w-16 bottom-[29%] left-[60%] rotate-[-8deg]">
+                <img id="software" src="assets/blender.png" alt="" class="absolute w-16 bottom-[29%] left-[70%] rotate-[8deg]">
+                <p id="software" class="absolute font-handwrite font-bold text-l text-darkMode bottom-[25%] right-[32%] rotate-[-2deg]">Softwares I mainly use!</p>
+
                 <h1 id="about-me" class="font-semibold text-[39.06px]">About Me</h1>
                 <p id="about-text" class=" text-lg leading-8">Since 2016, I have been immersed in the world of creativity. Starting with capturing and editing photos on my smartphone, I discovered a spark within me, and opportunities began to open one after another. My passion for tech and multimedia has built a strong foundation and brought me to where I am today. A mix of technical and creative skills—along with my love for pop culture, movies and video games—is what truly helped me shape my ideas and turn it into something impactful.</p>
            </div>
         </div>
     </section>
     
+    <section id="explore-section" class="">
+         <div class="grid mx-20 h-dvh place-content-center gradient-animate">
+            <h1 id="explore" class="text-8xl font-medium">Explore My Works <i class="fa-solid fa-circle-arrow-down"></i></h1>
+        </div>
+    </section>
+
     <!-- Projects Section -->
     <section id="section-3">
-        <div class="grid mx-20 h-svh place-content-center">
-            <h1 class="text-8xl font-medium">Explore My Works <i class="fa-solid fa-circle-arrow-down"></i></h1>
-        </div>
-
         <!-- Poster Designs -->
         <div id="poster-design" class="grid grid-cols-3 grid-rows-2 gap-x-5 gap-y-16 mx-20 h-auto">
             <div class="col-span-1">
