Fixed gsap and lenis lag on mobile

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <div class="col-span-1">
                 <div class="grid grid-rows-2">
                     <div class="row-span-1">
-                        <h3 id="magazine-text" class="font-semibold sm:text-2xl md:text-5xl md:leading-10 md:justify-self-end md:text-right">#####</h3>
+                        <h3 id="magazine-text" class="font-semibold sm:text-2xl md:text-5xl md:leading-10 md:justify-self-end md:text-right">#########</h3>
                     </div>
                     <div class="row-span-1 flex md:flex-row-reverse">
                         <img id="magazine-arrow" src="assets/down-right-arrow.png" alt="" class="sm:h-12 md:h-16 justify-self-end">
@@ -293,7 +293,7 @@
         <!-- Social Media Graphics -->
         <div id="socmed" class="grid gap-x-5 gap-y-5 mt-60 pb-48 h-auto sm:grid-cols-1 sm:px-8 md:mx-20 md:grid-cols-3 ">
             <div class="md:col-span-3 md:flex md:items-center">
-                <h3 id="socmed-text" class="text-4xl md:text-6xl font-semibold">#####</h3>
+                <h3 id="socmed-text" class="text-4xl md:text-6xl font-semibold">##########</h3>
                 <div class="flex md:flex-none">
                     <img id="socmed-arrow" src="assets/down-right-arrow.png" alt="" class="h-16 justify-self-end">
                     <img id="socmed-arrow" src="assets/down-right-arrow.png" alt="" class="h-16 justify-self-end">
@@ -317,14 +317,14 @@
 
     <!-- CTA -->
     <section id="cta-section" class="relative">
-        <div id="cta-bg" class="absolute inset-0 bg-bg1 bg-cover bg-center"></div>  
-            <div class="bg-darkMode/75 backdrop-opacity-75"> 
-                <div id="bg-gradient" class="absolute inset-0 bg-[radial-gradient(circle_at_bottom_right,_#4891CE,_transparent_40%)]"></div>
-                    <div class="grid min-h-svh items-center sm:p-4 md:mx-20 md:grid-cols-12">
-                        <div class="col-span-6 col-start-2">
+        <div id="cta-bg" class="absolute inset-0 bg-bg1 bg-cover bg-center -z-20"></div>
+            <div class="bg-darkMode/75 backdrop-opacity-75 -z-10"> 
+                <div id="bg-gradient" class="absolute inset-0 bg-[radial-gradient(circle_at_bottom_right,_#4891CE,_transparent_40%)] -z-10"></div>
+                    <div class="grid min-h-svh items-center sm:p-4 md:grid-cols-12">
+                        <div class="col-span-6 col-start-2 flex flex-col ">
                             <h3 id="cta-header" class="text-3xl md:text-6xl font-semibold text-lightMode">Have a project in mind?</h3>
-                            <p id="cta-subtext" class="text-lightMode pt-4 font-light">Let's work together. Every project starts with a conversation.</p>
-                            <a id="cta-button" href="https://www.linktr.ee/rvcreates" target="_blank"><button class="w-64 h-auto bg-accentColor text-lightMode font-semibold mt-8 p-6 rounded-[50px]">Let's Talk</button></a>
+                            <p id="cta-subtext" class="text-lightMode pt-4 font-light">Every project starts with a conversation.</p>
+                            <a id="cta-button" class="w-48 md:w-64 text-center bg-accentColor text-lightMode font-semibold mt-8 px-8 py-6 rounded-[50px]" href="https://www.linktr.ee/rvcreates" target="_blank">Let's Talk</a>
                             
                             <div class="col-start-2 col-span-3 flex mt-4">
                                 <img src="assets/up-right-arrow.png" alt="" class="h-16">
