Fixed hero section animations after preloader is finished.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div id="mainContent" class="opacity-0 invisible">
 
                 <!-- Navigation Bar -->
-                <nav id="topnav" class=" bg-lightMode w-auto h-auto drop-shadow-xl z-50 sm:py-4 md:p-6">
+                <nav id="topnav" class="hidden md:block bg-lightMode w-auto h-auto drop-shadow-xl z-50 sm:py-4 md:p-6">
                     <div id="navElements" class="md:flex flex-row justify-between place-items-center">
                         <div id="site-logo" class="text-center sm:pb-4 md:pb-0">
                             <a href="#"><h6 class="font-semibold">Clarence Velasco</h6></a>
@@ -409,13 +409,13 @@
                             <div class="sm:hidden md:block md:col-span-1 md:col-start-4">
                                 <div id="navButtons" class="flex flex-row justify-evenly">
                                     <div>
-                                        <a class="text-lightMode" href=""><h6>About</h6></a>
+                                        <a id="aboutBtn" class="text-lightMode" href="#"><h6>About</h6></a>
                                     </div>
                                     <div>
-                                        <a class="text-lightMode" href=""><h6>Work</h6></a>
+                                        <a id="workBtn" class="text-lightMode" href="#"><h6>Work</h6></a>
                                     </div>
                                     <div>
-                                        <a class="text-lightMode" href=""><h6>Let's Talk</h6></a>
+                                        <a id="contactBtn" class="text-lightMode" href="#"><h6>Let's Talk</h6></a>
                                     </div>
                                 </div>
                             </div>
