Updated CTA link

--- a/index.html
+++ b/index.html
@@ -350,8 +350,8 @@
                                 <div class="grid min-h-svh items-center sm:p-4 md:grid-cols-12">
                                     <div class="col-span-6 col-start-2 flex flex-col ">
                                         <h3 id="cta-header" class="text-3xl md:text-6xl font-semibold text-lightMode">Have a project in mind?</h3>
-                                        <p id="cta-subtext" class="text-lightMode pt-4 font-light">Every project starts with a conversation.</p>
-                                        <a id="cta-button" class="w-48 md:w-64 text-center bg-white text-darkMode font-semibold mt-8 px-8 py-6 rounded-[50px]" href="mailto:rvcreates.design@gmail.com?cc=clarencevel@gmail.com&subject=Design Inquiry" target="_blank">Let's Talk</a>
+                                        <p id="cta-subtext" class="text-lightMode pt-4 font-light">Let's connect. Every project starts with a conversation.</p>
+                                        <a id="cta-button" class="w-48 md:w-64 text-center bg-white text-darkMode font-semibold mt-8 px-8 py-6 rounded-[50px]" href="https://linktr.ee/rvcreates" target="_blank">Let's Talk</a>
                                         
                                         <div class="col-start-2 col-span-3 flex mt-4">
                                             <img src="assets/up-right-arrow.png" alt="" class="h-16">
