--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Clarence Velasco - Portfolio" />
+    <meta property="og:description" content="Check out my work and projects." />
+    <meta property="og:image" content="https://c-velasco.vercel.app/thumbnail.jpg" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image" content="https://c-velasco.vercel.app/thumbnail.jpg" />
     <title>Clarence Velasco - Portfolio</title>
     <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="stylesheet" href="/src/input.css">
